[metadata]
name = surf
version = 1.0.0
author = dj_tech
description = Building and mantaining projects for the 21st century
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/djtech-dev/surf
project_urls =
    Docs = https://github.com/djtech-dev/surf
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src